--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "gatsby": "^2.0.28",
+    "gatsby-image": "^2.0.15",
     "gatsby-plugin-manifest": "^2.0.5",
     "gatsby-plugin-offline": "^2.0.7",
     "gatsby-plugin-react-helmet": "^3.0.0",
@@ -12,6 +13,7 @@
     "gatsby-remark-images": "^2.0.4",
     "gatsby-source-filesystem": "^2.0.5",
     "gatsby-transformer-remark": "^2.1.8",
+    "gatsby-transformer-sharp": "^2.1.4",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0"
