--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0",
+    "react-stripe-elements": "^2.0.1",
     "styled-components": "^4.0.2"
   },
   "keywords": [
